--- a/website/party.html
+++ b/website/party.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <main>
-        <div id="firework-id" class="firework-class">
-            
-        </div>
+        <h1> BOOM BOOM FIREWORKS, ENJOY THIS DUMB LITTLE ANIMATION I MADE WHILE BEING SLEEP DEPRIVED</h1>
+        <div id="firework-id" class="firework-class"></div>
+        <div id="ground-id"></div>
+        <div id="moon-id"></div>
     </main>
 </body>
 </html>
